# ghidra-mcp

./: .env.template  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_FINAL_REPORT.md  COMPLETE_SOLUTION_PACKAGE.md  CONTRIBUTING.md  D2EDICALL_APPLICATION_SUCCESS.md  D2EDICALL_DEFINITION_COMPLETE.md  D2EDICALL_INSTALLATION_COMPLETE.md  D2EDICALL_INSTALLATION_GUIDE.md  DEPLOYMENT_COMPLETE.md  DIABLO2_CALLING_CONVENTIONS_STRATEGY.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  Dump-ProcessMemory.ps1  FIXES_IMPLEMENTED.md  GAME_EXE_IMPROVEMENTS.md  HUNGARIAN_NOTATION_VALIDATION.md  HYPOTHESIS_CONFIRMATION_SMemAlloc_Ordinal401.md  Hash_Based_Function_Renaming_Strategy.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE_SMemAllocEx_Rename.md  IMPROVEMENTS.md  IMPROVEMENTS_QUICK_REFERENCE.md  INDEX_AND_GUIDE.md  ISSUES.md  ISSUE_ANALYSIS.md  MCP_TOOLS_IMPROVEMENTS.md  MEMORY.md  ORDINAL_UNIFICATION_GUIDE.md  PLATE_COMMENT_VALIDATION_ENHANCEMENT.md  PRE_COMMIT_REVIEW_v1.7.3.md  PROJECT_CLEANUP_SUMMARY.md  QUICKWIN_COMPLETION_REPORT.md  README.md  RELEASE_COMPLETE_v1.9.2.md  (+85 more)
.claude/: settings.local.json
.github/: FUNDING.yml
continuous_improvement/: cycle_history.json
debugger/: address_map.py  engine.py  protocol.py  server.py  tracing.py
docker/: Dockerfile  README.md  docker-compose.multi.yml  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: AGENT_ITERATION_STRATEGIES.md  API_REFERENCE.md  Analysis_AllocateConnectionRecord_CrossVersion.md  BINARY_DOCUMENTATION_STRATEGY.md  CALL_RETURN_OVERRIDE_CLEANUP.md  COMPARISON_ORIGINAL_VS_REFACTORED.md  COMPLETE_ENHANCEMENT_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  D2STRUCTS_COMPLETE_SUCCESS_REPORT.md  D2_BINARY_ANALYSIS_INTEGRATION_GUIDE.md  D2_CONVENTION_SCRIPTS_README.md  DATA_TYPE_TOOLS.md  DEVELOPMENT_CYCLE_REPORT_20250923_131056.json  DEVELOPMENT_GUIDE.md  DEV_CYCLE_README.md  DOCUMENTATION_INDEX.md  Detailed_Investigation_Ordinal_401.md  EBP_REGISTER_REUSE_SOLUTIONS.md  ENDPOINT_FIXES_SUMMARY.md  ENHANCED_DEV_PROCESS.md  ENHANCED_PROCESS_TEST.md  ERROR_CODES.md  FUNCTION_DOCUMENTATION_STRATEGY.md  FUNCTION_STRUCTURE_ANALYSIS.md  GHIDRA_MCP_TOOLS_REFERENCE.md  HYBRID_PROCESSOR_GUIDE.md  Investigation_AddAuHandlerToList_Differences.md  KNOWN_ORDINALS.md  LATEST_DEVELOPMENT_REPORT.md  NAMING_CONVENTIONS.md  NORETURN_FIX_GUIDE.md  ORGANIZATION_SUMMARY.md  PERFORMANCE_BASELINES.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS.md  (+7 more)
(+892 files in other folders)
