[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidra-mcp-bridge"
version = "5.6.0"
description = "Model Context Protocol bridge for Ghidra reverse engineering"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Ben Ethington", email = "ben@ethington.dev"}
]
keywords = ["ghidra", "mcp", "reverse-engineering", "binary-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

dependencies = [
    "mcp>=1.5.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.22.0",
    "requests-mock>=1.10.0",
    "coverage>=7.0.0",
    "pytest-json-report>=1.5.0",
    "pyyaml>=6.0.0",
]
debugger = [
    "pybag==2.2.16",
    "comtypes==1.4.16",
]

[project.scripts]
ghidra-mcp-bridge = "bridge_mcp_ghidra:main"

[project.urls]
Homepage = "https://github.com/bethington/ghidra-mcp"
Repository = "https://github.com/bethington/ghidra-mcp"
Issues = "https://github.com/bethington/ghidra-mcp/issues"

[tool.setuptools]
py-modules = ["bridge_mcp_ghidra"]

[tool.setuptools.package-data]
"*" = ["tests/endpoints.json"]
